examples/errors/1043-errors-lambda-raise-annotation-hint.sx
// A closure literal whose body `raise`s but is annotated non-failable (or has
// no `!` in its return) gets a LAMBDA-SPECIFIC diagnostic telling the user to
// declare the failable return explicitly (ERR E5.1 sub-feature 1). This is the
// closure analog of the top-level "raise is only valid inside a failable
// function" error — failability is never inferred for a lambda, it must be
// declared, so a raising lambda with no `!` is a hard error pointing at the fix.

#import "modules/std.sx";

E :: error { Neg }

take :: (cb: Closure(i32) -> (i32, !E), x: i32) -> i32 { return cb(x) catch (e) -1; }

main :: () -> i32 {
    // `-> i32` (non-failable) but the body raises → lambda-specific hint:
    //   "lambda body raises; declare its return type explicitly with
    //    `-> (T, !)` or `-> (T, !Named)`"
    print("{}\n", take(closure((x: i32) -> i32 { if x < 0 { raise error.Neg; } return x; }), -1));
    return 0;
}
